--- a/dionysus-client/yo/app/jade/templates/home.jade
+++ b/dionysus-client/yo/app/jade/templates/home.jade
@@ -1,11 +1,10 @@
 script#module-tpl(type="text/template")
-  .ui.fluid.card
-    a.image(href!="<%= href %>")
-      img(src!="<%= image %>")
-    .content
-      a.header(href!="<%= href %>") <%= title %>
-      .meta <%= subtitle %>
-      .description <%= body %>
+  a.image(href!="<%= href %>")
+    img(src!="<%= image %>")
+  .content
+    a.header(href!="<%= href %>") <%= title %>
+    .meta <%= subtitle %>
+    .description <%= body %>
 
 script#modules-tpl(type="text/template")
-  .ui.three.column.grid.cards
+  .ui.three.doubling.cards
