introduce backbone.picky library

--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -4,6 +4,7 @@ script(src="/bower_components/underscore/underscore.js")
 script(src="/bower_components/backbone/backbone.js")
 script(src="/bower_components/backbone.babysitter/lib/backbone.babysitter.js")
 script(src="/bower_components/backbone.wreqr/lib/backbone.wreqr.js")
+script(src="/bower_components/backbone.picky/lib/backbone.picky.js")
 script(src="/bower_components/backbone.intercept/dist/backbone.intercept.js")
 script(src="/bower_components/marionette/lib/core/backbone.marionette.js")
 script(src="/bower_components/semantic-ui/dist/semantic.js")
