--- a/dionysus-client/yo/app/jade/templates/footer.jade
+++ b/dionysus-client/yo/app/jade/templates/footer.jade
@@ -1,5 +1,5 @@
 script#footer-tpl(type="text/template")
-  .container
+  .ui.segment
     .row
       .col.l6.s12
         h5.white-text Footer Content
