--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -3,7 +3,26 @@
 main {
   display: block;
   min-height: 500px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
 
+body {
+  padding-top: 1rem;
+}
+
+header {
+  margin-top: 1rem;
+  height: 3rem;
+}
+
+footer {
+  margin: 1rem;
+}
+main, header, footer {
+  width: 85%;
+  margin: 0 auto;
 }
 
 article {
