--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -9,3 +9,4 @@ include ./templates/home
 include ./templates/articles
 include ./templates/about
 include ./templates/account
+include ./templates/tests
