remove duplicate code

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -27,6 +27,7 @@ html(class="no-js")
 
   // build:js({app,.tmp}) /scripts/admin/app.js
   script(src="/scripts/app.js")
+  script(src="/scripts/common/entity.js")
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/articles.js")
   script(src="/scripts/admin/category.js")
