split entities into modules

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -19,6 +19,7 @@ html(class="no-js")
   // build:js({app,.tmp}) /scripts/app.js
   script(src="/scripts/app.js")
   script(src="/scripts/common/entity.js")
+  script(src="/scripts/common/article.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
