--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -29,6 +29,7 @@ html(class="no-js")
   script(src="/scripts/app.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
+  script(src="/scripts/common/category.js")
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/article-management.js")
   script(src="/scripts/admin/category-management.js")
