combine small modules

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -34,5 +34,6 @@ html(class="no-js")
   script(src="/scripts/admin/article-management.js")
   script(src="/scripts/admin/category-management.js")
   script(src="/scripts/admin/tests.js")
-  script(src="/scripts/admin/boot.js")
+  script
+    | Dionysus.start();
   // endbuild
