--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -27,5 +27,6 @@ html(class="no-js")
   script(src="/scripts/modules/article.js")
   script(src="/scripts/modules/category.js")
   script(src="/scripts/modules/test.js")
-  script(src="/scripts/boot.js")
+  script
+    | Dionysus.start();
   // endbuild
