add menu module

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -21,11 +21,14 @@ html(class="no-js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/module.js")
+  script(src="/scripts/common/menu.js")
+  script(src="/scripts/common/header.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
   script(src="/scripts/modules/article.js")
   script(src="/scripts/modules/category.js")
+  script(src="/scripts/modules/site.js")
   script(src="/scripts/modules/test.js")
   script
     | Dionysus.start();
