--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -12,7 +12,7 @@ body {
   padding-top: 1rem;
 }
 
-header {
+#header {
   margin-top: 1rem;
   height: 3rem;
 }
@@ -20,7 +20,7 @@ header {
 footer {
   margin: 1rem;
 }
-main, header, footer {
+#main, #header, #footer {
   width: 85%;
   margin: 0 auto;
 }
