--- a/dionysus-client/yo/app/jade/templates/tests.jade
+++ b/dionysus-client/yo/app/jade/templates/tests.jade
@@ -1,14 +1,17 @@
 script#test-tpl(type="text/template")
   //- test name and description
+
   #test-header.ui.vertical.segment
   #test-item.ui.vertical.segment
   #test-wizard.ui.vertical.segment
 
 script#test-header-tpl(type="text/template")
   //- test name and description
-  h3 <%= title %>
-  h5 <%= description %>
-  span
+  .ui.basic.segment
+    h2 <%= title %>
+  .ui.basic.segment
+    h4 <%= description %>
+  .ui.basic.segment
     h5 第<%= current+1 %>题，一共<%= total %>题
 
 script#test-item-tpl(type="text/template")
@@ -24,6 +27,6 @@ script#test-item-option-tpl(type="text/template")
 
 script#test-wizard-tpl(type="text/template")
   .four.wide.column
-      #last.ui.primary.button 上一题
+    #last.ui.pink.basic.button 上一题
   .four.wide.column
-      #next.ui.primary.button 下一题
+    #next.ui.pink.basic.button 下一题
