--- a/dionysus-client/yo/app/jade/templates/tests.jade
+++ b/dionysus-client/yo/app/jade/templates/tests.jade
@@ -27,6 +27,9 @@ script#test-item-option-tpl(type="text/template")
 
 script#test-wizard-tpl(type="text/template")
   .four.wide.column
-    #last.ui.pink.basic.button 上一题
+    #last.ui.purple.button 上一题
   .four.wide.column
-    #next.ui.pink.basic.button 下一题
+    #next.ui.purple.button 下一题
+  .four.wide.column
+    #submit.ui.purple.disabled.button 提交答案
+
