adjust tests layout

--- a/dionysus-client/yo/app/jade/templates/tests.jade
+++ b/dionysus-client/yo/app/jade/templates/tests.jade
@@ -27,9 +27,12 @@ script#test-item-option-tpl(type="text/template")
 
 script#test-wizard-tpl(type="text/template")
   .four.wide.column
-    #last.ui.purple.button 上一题
+    .ui.basic.segment
+      #last.ui.purple.button 上一题
   .four.wide.column
-    #next.ui.purple.button 下一题
+    .ui.basic.segment
+      #next.ui.purple.button 下一题
   .four.wide.column
-    #submit.ui.purple.disabled.button 提交答案
+    .ui.basic.segment
+      #submit.ui.purple.disabled.button 提交答案
 
