refactoring test code

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -23,6 +23,7 @@ html(class="no-js")
   script(src="/scripts/common/module.js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
+  script(src="/scripts/common/test.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
