update register js

--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -4,5 +4,7 @@ script#header-tpl(type="text/template")
     | Home
   .right.menu
     a.item(href="/app/login") Login
+  .right.menu
+    a.item(href="/app/register") Register
 
 
