--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -8,7 +8,9 @@ script(src="//libs.cncdn.cn/semantic-ui/1.8.1/semantic.min.js")
 // build:js(.) /scripts/plugins.js
 script(src="/bower_components/backbone.select/dist/backbone.select.js")
 script(src="/bower_components/backbone.intercept/dist/backbone.intercept.js")
-script(src="/bower_components/backbone.paginator/lib/backbone.paginator.js")
+script(src="/bower_components/backbone-relational/backbone-relational.js")
+script(src="/bower_components/uri-templates/uri-templates.js")
+script(src="/bower_components/backbone-relational-hal/backbone-relational-hal.js")
 // endbuild
 
 //- // build:js(.) /scripts/backbone.js
