--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -12,3 +12,4 @@ include ./templates/articles
 include ./templates/about
 include ./templates/account
 include ./templates/test
+include ./templates/site
