--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -18,6 +18,7 @@ html(class="no-js")
 
   // build:js({app,.tmp}) /scripts/app.js
   script(src="/scripts/app.js")
+  script(src="/scripts/hal/domain.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/module.js")
