add "about" "avatar" to User

--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -13,3 +13,4 @@ include ./templates/about
 include ./templates/account
 include ./templates/test
 include ./templates/site
+include ./templates/consultant
