add consultant entry

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -24,12 +24,14 @@ html(class="no-js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
   script(src="/scripts/common/test.js")
+  script(src="/scripts/consultant/consultant.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
   script(src="/scripts/modules/account.js")
   script(src="/scripts/modules/article.js")
   script(src="/scripts/modules/category.js")
   script(src="/scripts/modules/site.js")
+  script(src="/scripts/modules/consultant.js")
   script(src="/scripts/modules/test.js")
   script
     | Dionysus.start();
