--- a/dionysus-client/yo/app/jade/templates/site.jade
+++ b/dionysus-client/yo/app/jade/templates/site.jade
@@ -20,7 +20,7 @@ script#site-tpl(type="text/template")
 					i.circular.chat.icon
 				p 在线一对一心理咨询预约
 				p
-					a.ui.labled.icon.button(href="/app/consult") 建设中
+					a.ui.labled.icon.button(href="/app/consultants") 建设中
 						i.lock.icon
 			.column
 				.ui.icon.header 心理科课程
