change layout a little bit

--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -1,7 +1,8 @@
-div#header
-  header#navigation
-  #submenu
-main#main
+div#content-holder
+  div#header
+    header#navigation
+    #submenu
+  main#main
 footer#footer
 #dialog
 
