--- a/dionysus-client/yo/app/jade/templates/consultant.jade
+++ b/dionysus-client/yo/app/jade/templates/consultant.jade
@@ -9,4 +9,4 @@ script#consultant-tpl(type="text/template")
     p.description <%= about %>
     a.ui.button 预约
 
-script#appointment-tpl(type="text/template")
+script#consult-appointment-tpl(type="text/template")
