--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -6,10 +6,16 @@ main {
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 1rem;
+  padding-bottom: 150px;
 }
 
 body {
   padding-top: 1rem;
+}
+
+content-holder{
+  height: auto; 
+  min-height: 100%;
 }
 
 #header {
@@ -17,8 +23,12 @@ body {
   height: 3rem;
 }
 
-footer {
+#footer {
   margin: 1rem;
+  position: relative;
+  margin-top: -150px;
+  height: 150px;
+  clear:both;
 }
 #main, #header, #footer {
   width: 85%;
