eliminate inline styles

--- a/dionysus-client/yo/app/jade/templates/site.jade
+++ b/dionysus-client/yo/app/jade/templates/site.jade
@@ -1,8 +1,8 @@
 script#site-tpl(type="text/template")
-	.ui.grid(style="background-image: url(/public/images/bg.jpg);background-size: cover;")
+	.ui.grid.jumbotron
 		.eight.wide.column
 			img(src="/public/images/logo.png")
-		.eight.wide.column(style="padding-top:4rem")
+		.eight.wide.column.dialogue
 			.ui.inverted.header
 				h1 汇心网，关怀无处不在
 				p 这个全世界最专业的中文心理网站，集专业与娱乐于一体与您贴心相伴，随时，随地，随心。
