--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -9,6 +9,15 @@ main {
   padding-bottom: 150px;
 }
 
+.jumbotron {
+  background-image: url(/public/images/bg.jpg);
+  background-size: cover;
+}
+
+.ui.grid.jumbotron .dialogue{
+  padding-top:4rem;
+}
+
 body {
   padding-top: 1rem;
 }
