add consultant appointment page

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -25,6 +25,7 @@ html(class="no-js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
   script(src="/scripts/common/test.js")
+  script(src="/scripts/common/appointment.js")
   script(src="/scripts/consultant/consultant.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
@@ -34,6 +35,7 @@ html(class="no-js")
   script(src="/scripts/modules/site.js")
   script(src="/scripts/modules/consultant.js")
   script(src="/scripts/modules/test.js")
+  script(src="/scripts/modules/appointment.js")
   script
     | Dionysus.start();
   // endbuild
