update email register

--- a/dionysus-client/yo/app/jade/templates/account.jade
+++ b/dionysus-client/yo/app/jade/templates/account.jade
@@ -22,6 +22,9 @@ script#account-register-tpl(type="text/template")
   .required.field
     label Retype Password
     input(type="password", name="password1", placeholder="Retype password")
+  .required.field
+    label Email
+    input(type="text", name="email", placeholder="Email")
   .field
     .ui.checkbox
       input(type="checkbox", name="terms")
