--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -36,6 +36,7 @@ html(class="no-js")
   script(src="/scripts/modules/consultant.js")
   script(src="/scripts/modules/test.js")
   script(src="/scripts/modules/appointment.js")
+  script(src="/scripts/modules/profile.js")
   script
     | Dionysus.start();
   // endbuild
