--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -15,3 +15,4 @@ include ./templates/account
 include ./templates/test
 include ./templates/site
 include ./templates/consultant
+include ./templates/profile
