--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -37,6 +37,7 @@ html(class="no-js")
   script(src="/scripts/modules/test.js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/profile.js")
+  script(src="/scripts/common/user.js")
   script
     | Dionysus.start();
   // endbuild
