add form to accounts jade

--- a/dionysus-client/yo/app/jade/templates/consultant.jade
+++ b/dionysus-client/yo/app/jade/templates/consultant.jade
@@ -14,19 +14,20 @@ script#consultant-tpl(type="text/template")
           .title 预约信息
             i.dropdown.icon
           .content
-            p
-              label 日期:  
-              input(type="date")
-            p
-              label 方式:  
-              select.ui.dropdown
-                option(value="ONLINE") 在线
-                option(value="OFFLINE") 面对面
-                option(value="BY_PHONE") 电话
-            p
-              label 留言:  
-              textarea
-            p
-              a.ui.button 预约
+            form  
+              .required.field
+                label 日期:  
+                input(type="date", name="date", placeHolder="Date")
+              .required.field
+                label 方式:  
+                select.ui.dropdown(name="approach")
+                  option(value="ONLINE") 在线
+                  option(value="OFFLINE") 面对面
+                  option(value="BY_PHONE") 电话
+              p
+                label 留言:  
+                textarea(name="reason")
+              p
+                .ui.button.submit 预约
 
 script#new-appointment-tpl(type="text/template")
