--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -16,3 +16,5 @@ include ./templates/test
 include ./templates/site
 include ./templates/consultant
 include ./templates/profile
+include ./templates/headerlogin
+include ./templates/logout
