--- a/dionysus-client/yo/app/jade/templates/profile.jade
+++ b/dionysus-client/yo/app/jade/templates/profile.jade
@@ -13,8 +13,8 @@ script#profile-tpl(type="text/template")
           li
             a.grey-text.text-lighten-3(href="/app/consultants") Appointment
           li
-            a.grey-text.text-lighten-3(href="#!") Test
+            a.grey-text.text-lighten-3(href="app/tests") Test
           li
             a.grey-text.text-lighten-3(href="#!") Course
           li
-            a.grey-text.text-lighten-3(href="#!") Something else
+            a.grey-text.text-lighten-3(href="app/articles") Article
