--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -1,9 +1,21 @@
+
+// build:js(.) /scripts/backbone.js
+script(src="/bower_components/jquery/dist/jquery.js")
+script(src="/bower_components/underscore/underscore.js")
+script(src="/bower_components/backbone/backbone.js")
+script(src="/bower_components/backbone.babysitter/lib/backbone.babysitter.js")
+script(src="/bower_components/backbone.wreqr/lib/backbone.wreqr.js")
+script(src="/bower_components/marionette/lib/core/backbone.marionette.js")
+// endbuild
+
 //- Use CDN ?
-script(src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js")
-script(src="//apps.bdimg.com/libs/underscore.js/1.7.0/underscore-min.js")
-script(src="//apps.bdimg.com/libs/backbone.js/1.1.2/backbone-min.js")
-script(src="//apps.bdimg.com/libs/backbone.marionette/2.2.0/backbone.marionette.min.js")
+//- script(src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js")
+//- script(src="//apps.bdimg.com/libs/underscore.js/1.7.0/underscore-min.js")
+//- script(src="//apps.bdimg.com/libs/backbone.js/1.1.2/backbone-min.js")
+//- script(src="//apps.bdimg.com/libs/backbone.marionette/2.2.0/backbone.marionette.min.js")
 script(src="//libs.cncdn.cn/semantic-ui/1.8.1/semantic.min.js")
+
+
 
 // build:js(.) /scripts/plugins.js
 script(src="/bower_components/backbone.select/dist/backbone.select.js")
@@ -12,18 +24,6 @@ script(src="/bower_components/backbone-relational/backbone-relational.js")
 script(src="/bower_components/uri-templates/uri-templates.js")
 script(src="/bower_components/backbone-relational-hal/backbone-relational-hal.js")
 // endbuild
-
-//- // build:js(.) /scripts/backbone.js
-//- script(src="/bower_components/jquery/dist/jquery.js")
-//- script(src="/bower_components/underscore/underscore.js")
-//- script(src="/bower_components/backbone/backbone.js")
-//- script(src="/bower_components/backbone.babysitter/lib/backbone.babysitter.js")
-//- script(src="/bower_components/backbone.wreqr/lib/backbone.wreqr.js")
-//- script(src="/bower_components/backbone.select/dist/backbone.select.js")
-//- script(src="/bower_components/backbone.intercept/dist/backbone.intercept.js")
-//- script(src="/bower_components/backbone.paginator/lib/backbone.paginator.js")
-//- script(src="/bower_components/marionette/lib/core/backbone.marionette.js")
-//- // endbuild
 
 // build:js(.) /scripts/live.js
 script(src="/bower_components/sockjs/sockjs.js")
