--- a/dionysus-client/yo/app/jade/admin/categories.jade
+++ b/dionysus-client/yo/app/jade/admin/categories.jade
@@ -1,3 +1,20 @@
+script#admin-category-tpl(type="text/template")
+  a(href!="/admin/categories/<%= id %>")
+    | <%= name %>
+
 script#admin-categories-tpl(type="text/template")
-  p 
-    | show category information here
+  h4 Category Management
+  ul.ui.relaxed.items
+
+  a.ui.button(href="/admin/categories/create")
+    i.add.icon
+    | Create
+
+
+script#admin-category-editor-tpl(type="text/template")
+  .field
+    label Name
+    input(name="name", type="text", placeholder="Category Name")
+  .ui.button.submit
+    i.save.icon
+    | Save
