add query appointment by user

--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -18,3 +18,4 @@ include ./templates/consultant
 include ./templates/profile
 include ./templates/headerlogin
 include ./templates/logout
+include ./templates/appointment
