--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -39,6 +39,7 @@ html(class="no-js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/profile.js") 
   script(src="/scripts/modules/appointment.js")
+  script(src="/scripts/modules/error.js")
   script
     | Dionysus.start();
   // endbuild
