add toast message support

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -10,6 +10,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/froala/css/font-awesome.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_editor.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_style.css")
+    link(rel="stylesheet", href="/bower_components/toastr/toastr.css")
     link(rel="stylesheet", href="/styles/main.css")
     // endbuild
   body.dionysus
